# dance-game

./: README.md  code_review_report.html  config.json  create_sounds.py  dance-game_code_review_report.html  main.py  pyproject.toml  test_font.py
scripts/: fix_transparency.py
src/game/: __init__.py  arrow.py  audio_manager.py  constants.py  difficulty.py  engine.py  main.py  score.py  timing.py
src/utils/: asset_loader.py  config.py
tests/: test_arrow.py  test_score.py  test_timing.py
